# slitherlink

./: CMakeLists.txt  README.md
cmake/: Doxyfile.in  README.md
data/: README.md
doc/: README.md  indexing.ods  indexing.txt
exe/: README.md
lib/: CMakeLists.txt  README.md
lib/slither/: CMakeLists.txt
lib/slither/include/: slither.h
lib/slither/src/: slither.cpp
lib/slither/test/: test_board.cpp
scripts/: README.md  colors.sh  configure.sh
